# chunking-service

./: .gitignore  CITATIONS_AND_STREAMING_BEHAVIOR.md  Dockerfile  EMBEDDING_HANG_FIX.md  FAST_PARSER_FIX.md  FILEID_BEHAVIOR.md  FILES_CHECKLIST.md  LANCEDB_SCHEMA_FIX.md  PARSE_ENDPOINTS_DIFFERENCE.md  PARSING_SPEED_OPTIMIZATION.md  README.md  ROLLBACK_TO_DOCLING.md  ReadMe.txt  SKIPPED_FILES_SYNC_BEHAVIOR.md  STREAMING_BEHAVIOR.md  SUMMARY_AND_CITATION_FIX.md  SWAGGER_ENDPOINTS_GUIDE.md  SWAGGER_QUICK_START.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  test_summarizer.py
.ipynb_checkpoints/: docker-compose-checkpoint.yml  requirements-checkpoint.txt
app/: deps.py  lancedb_client.py  main.py  main.py.backup
app/.ipynb_checkpoints/: main-checkpoint.py
app/agents/: __init__.py  local_llama.py  use.py
app/api/routes/: dataroom.py  files.py  projects.py  query_logs.py  retriever.py  user.py  users.py
app/auth/: jwt.py  rbac.py  routes.py  userctx.py
app/db/: mongo.py
app/models/: schemas.py
app/retriever/: agent.py  agent_retriever.py  chunking_integration.py  config.py  hybrid_client.py  lancedb_client.py  models.py  opensearch_client.py  summarizer.py
app/scripts/: seed.py
app/services/: dataroom_service.py
app/static/: demo.html
app/utils/: agent_chunker.py  create_chunks.py  delete_ops.py  docling.py  docling_converter.py  docling_page_by_page.py  embedding.py  lance_client.py  storage.py  stream.py  structure_aware_chunks.py
docs/: local_llama_adk.md
scripts/: run_local_agent.py
tests/: conftest.py  test_auth_rbac.py  test_files.py  test_indexes.py  test_projects.py
